#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

my_want_md5 = no
AC_PREREQ(2.53)
AC_INIT(amt, 0.1.3, pusateri@juniper.net)
AM_INIT_AUTOMAKE(amt, 0.1.3)
AC_CONFIG_SRCDIR([relay/main.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h stddef.h sys/socket.h unistd.h netinet/in.h sys/timers.h sys/queue.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

AC_PREFIX_DEFAULT([/usr/local])
if test "x${prefix}" = "xNONE"; then
        prefix=${ac_default_prefix}
        AC_SUBST(prefix)
fi
if test "x${prefix}" != "x/usr"; then
        CPPFLAGS="$CPPFLAGS -I${prefix}/include"
        LDFLAGS="$LDFLAGS -L${prefix}/lib"
fi

# Checks for library functions.
AC_CHECK_FUNCS([strerror bzero socket])

# Checks for libraries.
AC_CHECK_LIB([pcap], [pcap_open_live])
AC_CHECK_LIB([event], [event_init])
AC_CHECK_LIB([md], [MD5Init], [], [ my_want_md5=yes ])

AM_CONDITIONAL([WANT_MD5], [test "$my_want_md5" = yes])
AC_CONFIG_FILES([Makefile doc/Makefile include/Makefile libmem/Makefile libmd5/Makefile libhmac/Makefile libpatricia/Makefile libprefix/Makefile libsum/Makefile gateway/Makefile relay/Makefile test_hmac/Makefile test_patricia/Makefile])


AC_OUTPUT
